--- a/src/testing/Nadeo.ini
+++ b/src/testing/Nadeo.ini
@@ -1,14 +1,3 @@
-;;;;;;;;;;;
-; WARNING ;
-;;;;;;;;;;;
-; In order to avoid any misfunctioning do no edit this file !
-
 [TmForever]
-Version=2.11.25
-WindowTitle=TrackMania United Forever
-UserSubDir=TrackMania
-Key=Ask
-Distro=TAHOR
-Language=en
-DisablePatchCheck=True
-InstallKey=Y4K5-C5TJ-GMFP-ARFM-WGH
+Something=Hello
+Working=True
